--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
-    "start": "next start"
+    "migrate": "prisma migrate deploy",
+    "start": "prisma migrate deploy && next start"
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
